# Xad_preselection

./: CMakeLists.txt  README.md  baseline.txt  compile_flags.txt  implementation_log.md  performance.md
src/: Matrix.cpp  Matrix.hpp  MatrixView.cpp  MatrixView.hpp  frobenius_norm.cpp  frobenius_norm.hpp  performance_test.cpp  syntax_test_Matrix.cpp  syntax_test_MatrixView.cpp  unit_test.cpp
